# kokoro-onnx-export

./: .gitignore  README.md  pyproject.toml  quantization_trials.csv.bak  quantization_trials.csv.bak2  wtf.ipynb
data/: quant-calibration.csv
src/kokoro_onnx/: __init__.py  cli.py  cli_count_params.py  cli_export.py  cli_quantize.py  cli_verify.py  convert_float_to_float16  convert_float_to_float16.py  count_params.py  export.py  profile_community_onnx.py  quantize.py  quantize_trial.py  util.py  verify.py
test/: test_convert_float_to_float16.py
