[project]
name = "kokoro-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Lyjak", email = "adrian@chatmeter.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.28.1",
    "kokoro",
    "misaki[en,ja,zh]>=0.7.6",
    "neural-compressor>=3.2",
    "onnx>=1.17.0",
    "onnxconverter-common>=1.14.0",
    "onnxruntime>=1.20.1",
    "onnxscript>=0.2.0",
    "pip>=25.0.1",
    "rich>=13.9.4",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.48.3",
    "typer>=0.15.1",
]

[project.scripts]
kokoro-onnx = "kokoro_onnx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kokoro = { path = "../kokoro" }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.ruff]
select = ["I"]  # Enable isort rules
