[project]
name = "kokoro-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Lyjak", email = "adrian@chatmeter.com" }
]
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "huggingface-hub>=0.28.1",
    "kokoro>=0.8.4",
    "misaki[en,ja,zh]>=0.7.6",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "pip>=25.0.1",
    "rich>=13.9.4",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "typer>=0.15.1",
]

[project.scripts]
kokoro-onnx = "kokoro_onnx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.ruff]
select = ["I"]  # Enable isort rules
